개발 환경에서, 프로젝트 내부 변경마다 서버 자동 재시작

--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,16 @@
 	</properties>
 
 	<dependencies>
+		<!-- 개발 환경에서 저장 할 때마다 재시작하기 -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+			<scope>runtime</scope>
+			<optional>true</optional>
+		</dependency>
+
+
+	
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
