--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,37 @@
 	</properties>
 
 	<dependencies>
+		<!--JDBC -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-jdbc</artifactId>
+			<version>1.4.1.RELEASE</version>
+		</dependency>
+
+		<!-- MYSQL 사용 -->
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.13</version>
+		</dependency>
+
+		<!--MyBatis 사용을 위해 추가한 디펜던시 3개 -->
+		<dependency>
+			<groupId>org.mybatis.spring.boot</groupId>
+			<artifactId>mybatis-spring-boot-starter</artifactId>
+			<version>1.1.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.mybatis</groupId>
+			<artifactId>mybatis-spring</artifactId>
+			<version>1.3.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.mybatis</groupId>
+			<artifactId>mybatis</artifactId>
+			<version>3.4.2</version>
+		</dependency>
+	
 		<!-- JSP와 Servlet 설정 -->
         <dependency>
             <groupId>org.apache.tomcat.embed</groupId>
