Board List 목록 나오게 + 글 읽기와 연 - 글 작성 + 읽기 + 리스트 기능 완성

--- a/pom.xml
+++ b/pom.xml
@@ -55,12 +55,18 @@
         <dependency>
             <groupId>org.apache.tomcat.embed</groupId>
             <artifactId>tomcat-embed-jasper</artifactId>
-            <version>8.0.36</version>
         </dependency>
         <dependency>
             <groupId>javax.servlet.jsp.jstl</groupId>
             <artifactId>javax.servlet.jsp.jstl-api</artifactId>
             <version>1.2.1</version>
+        </dependency>
+        
+        <!-- JSTL -->
+        <dependency>
+            <groupId>jstl</groupId>
+            <artifactId>jstl</artifactId>
+            <version>1.2</version>
         </dependency>
 
 		<!-- 개발 환경에서 저장 할 때마다 재시작하기 -->
