Board Register 글 등록할 때, 파일 첨부 기능 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.datasource.driver-class-name= com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/kbj_springboot_board_database?characterEncoding=UTF-8&serverTimezone=UTC
 spring.datasource.username=kbj_springboot_board
 spring.datasource.password=kbj_springboot_board
+
+file.upload.path=/../uploads/
