--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,19 @@
 	</properties>
 
 	<dependencies>
+	    <!-- 파일 업로드시 중복 방지를 위한 Random String 생성 -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.0</version>
+        </dependency>
+        <!--Multipart File Up&Download -->
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.5</version>
+        </dependency>
+	
 		<!--JDBC -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
