--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 
 spring.datasource.driver-class-name= com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/kbj_springboot_board_database?characterEncoding=UTF-8&serverTimezone=UTC
-spring.datasource.username=kbj_springboot_board
-spring.datasource.password=kbj_springboot_board
+spring.datasource.url=jdbc:mysql://localhost:3306/kbj_board_springboot_database?characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.username=kbj_board_springboot
+spring.datasource.password=TestTest1234!@
 
 file.upload.path=/../uploads/
