--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,9 @@ spring.datasource.username=kbj_board_springboot
 spring.datasource.password=TestTest1234!@
 
 file.upload.path=/../uploads/
+
+
+cloud.aws.credentials.accessKey=AKIA364A
+cloud.aws.credentials.secretKey=6xVJmVfXrtz6MUMreT
+cloud.aws.s3.bucket=kbj.board.springboot
+cloud.aws.region.static=ap-northeast-2<p></p>
